--- a/src/Component/Blog/Blog.css
+++ b/src/Component/Blog/Blog.css
@@ -105,7 +105,26 @@
   .blog__container {
     grid-template-columns: 1fr;
     gap: 30px;
-
     place-items: center;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .blog__card {
+    width: 80%;
+    box-shadow: 2px 2px 10px lightgray;
+  }
+  .blog__card img {
+    width: 100%;
+    object-fit: fill;
+  }
+  .blog__body {
+    max-width: 1000px;
+    margin: 0px auto;
+    padding: 50px 20px;
+    box-shadow: 2px 2px 10px lightgray;
+    position: relative;
+    top: -10px;
+    background-color: white;
   }
 }
