--- a/src/Component/Feature/Feature.css
+++ b/src/Component/Feature/Feature.css
@@ -50,6 +50,15 @@
   margin-top: 10px;
   font-size: 18px;
 }
+.close__modal__boss {
+  position: relative;
+}
+.close__modal {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+}
 /* responsive part  starts here*/
 
 @media screen and (min-width: 720px) {
